--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET=OrcMjPZUc4CDQ6cA4PYRjeCkJ3ECv8i3
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=o6ARs35deGhFA7taHsrCxyqt5l6QlGym
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=dcrpplzvv
+CLOUDINARY_API_KEY=663887412745559
+CLOUDINARY_API_SECRET=LypgiqvLlhH51x3HPM-zPBgOggE
