--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
 PORT=8000
-MONGODB_URI="mongodb://admin:ipkRblQmk5e@rp000123571.uhc.com:27017,rp000090883.uhc.com:27017,rp000123572.uhc.com:27017/"
-CORS_ORIGIN=*
+MONGODB_URI=mongodb+srv://asrumochanparidauhg_db_user:asru123@cluster0.rfzlrdg.mongodb.net/
 ACCESS_TOKEN_SECRET=OrcMjPZUc4CDQ6cA4PYRjeCkJ3ECv8i3
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=o6ARs35deGhFA7taHsrCxyqt5l6QlGym
